<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@android:color/white"
        >

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@null"
            android:src="@drawable/skyline_hotel_nyc"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cover"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/pro_title"
            android:textSize="@dimen/font_size_large"/>

        <TextView
            android:id="@+id/textHostName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitle"
            android:maxLines="1"
            android:layout_alignStart="@id/textTitle"
            android:layout_alignEnd="@id/textTitle"
            android:textSize="@dimen/font_size_normal"
            android:text="@string/host_name"
            android:textColor="@color/colorDarkerGray"/>


        <TextView
            android:id="@+id/textExpire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/textHostName"
            android:textStyle="bold"
            android:text="@string/expired_date"
            android:textSize="@dimen/font_size_small"
            android:textColor="@color/colorHighLight"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/textNewCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/colorHighLight"
            android:layout_alignParentEnd="true"
            android:text="@string/new_cost"
            android:layout_alignBottom="@id/textExpire"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textOldCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_normal"
            android:textColor="@color/colorDarkerGray"
            android:text="@string/old_cost"
            android:layout_alignTop="@id/textNewCost"
            android:layout_toStartOf="@id/textNewCost"
            android:layout_marginTop="2dp"
            android:textStyle="bold"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>

