<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CircleIndicator="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_wpmg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">


        <TextView
            android:id="@+id/textOwner"
            style="@style/AppTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:alpha="0"
            android:gravity="center"
            android:text="@string/owner"
            android:textSize="@dimen/font_size_xlarge" />

        <com.dinosys.wmcloyalty.util.widget.pagercontainer.PagerContainer
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPagePromotions"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="@dimen/default_margin_medium"
                android:alpha="0" />

        </com.dinosys.wmcloyalty.util.widget.pagercontainer.PagerContainer>

        <com.dinosys.wmcloyalty.util.widget.indicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            CircleIndicator:ci_background="@android:color/white"
            CircleIndicator:ci_gravity="center"
            CircleIndicator:ci_margin="5dp"
            CircleIndicator:ci_mode="outside"
            CircleIndicator:ci_radius="5dp"
            CircleIndicator:ci_selected_background="@color/colorAccent" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="0"
            android:alpha="0"
            android:text="@string/btn_sign_in" />


    </LinearLayout>


    <ProgressBar
        android:id="@+id/viewLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_in"
        android:visibility="visible" />


    <TextView
        android:id="@+id/textCompanyName"
        style="@style/AppTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="?actionBarSize"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/owner_company"
        android:textSize="@dimen/font_size_xxlarge" />


</FrameLayout>