<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:CircleIndicator="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_wpmg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">


        <TextView
            android:id="@+id/textOwner"
            style="@style/AppTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:gravity="center"
            android:text="@string/owner"
            android:textSize="@dimen/font_size_xlarge"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"/>


        <android.support.v4.view.ViewPager
            android:id="@+id/viewPagePromotions"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:alpha="0"
             />

        <ProgressBar
            android:id="@+id/viewLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:indeterminate="true"
            android:indeterminateTintMode="src_in"
            android:indeterminateTint="@color/colorPrimary"
            />

        <com.dinosys.wmcloyalty.util.widget.viewpager.CircleIndicator
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:id="@+id/indicator"
            android:layout_marginTop="5dp"
            CircleIndicator:ci_background="@android:color/white"
            CircleIndicator:ci_selected_background="@color/colorAccent"
            CircleIndicator:ci_mode="outside"
            CircleIndicator:ci_gravity="center"
            CircleIndicator:ci_radius="5dp"
            CircleIndicator:ci_margin="5dp"
            android:layout_below="@id/viewPagePromotions"
            android:visibility="gone"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp">

            <Button
                android:id="@+id/btnSignIn"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="1"
                android:text="@string/btn_sign_in" />
        </FrameLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textCompanyName"
        style="@style/AppTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/owner_company"
        android:textSize="@dimen/font_size_xxlarge" />
</FrameLayout>